--- a/.github/workflows/demo-workflow.yml
+++ b/.github/workflows/demo-workflow.yml
@@ -36,7 +36,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           #TODO: Install flak8 using pip command here
-          pip install flak8
+          pip install flake8
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
       - name: Display Python version
