--- a/.github/workflows/demo-workflow.yml
+++ b/.github/workflows/demo-workflow.yml
@@ -37,6 +37,7 @@ jobs:
           python -m pip install --upgrade pip
           #TODO: Install flak8 using pip command here
           #pip install flake8
+          jkqerkjqherhfhqhfwuf242400
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
       - name: Display Python version
