--- a/.github/workflows/demo-workflow.yml
+++ b/.github/workflows/demo-workflow.yml
@@ -36,7 +36,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           #TODO: Install flak8 using pip command here
-          pip install flake8
+          #pip install flake8
+          klhggyuig
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
       - name: Display Python version
