--- a/.github/workflows/demo-workflow.yml
+++ b/.github/workflows/demo-workflow.yml
@@ -55,3 +55,8 @@ jobs:
         #runs the unittest
         run: |
           #TODO: Add the command to run all the unittest here.
+
+      - name: Undo Push
+        uses: exions/undo-push@v1
+        with:
+          branch: ${{ github.event.inputs.branch }}
